syntax = "proto3";
package com.ah.cloud.permissions.proto.service;

message SendContent {
  // 消息id uuid
  int64 msg_id = 1;
  // 消息格式 文字, 语音, 图片
  int32 format = 2;
  // 消息类型 绑定，单聊，群聊，聊天室，ack，心跳，
  int32 msgType = 3;
  // 时间戳
  int64 timestamp = 4;
  // 消息体
  string body = 5;
  // 消息来源
  int32 msgSource = 6;
  // 序列号id
  int32 sequenceId = 7;
}

message ComplexSendContent {
  // 消息内容集合
  repeated SendContent sendContentList = 1;
}
